Optimizations after some benchmarks (#2)